# wiki2qid

./: Cargo.toml  README.md
helpers/: download  generate
src/: main.rs
